--- a/src/static/ngordnet_2a.html
+++ b/src/static/ngordnet_2a.html
@@ -2,7 +2,10 @@
 <!DOCTYPE html>
 <head>
 <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
-<script src="jquery.min.js"></script></head>
+<script src="jquery.min.js"></script>
+<script src="d3.v7.min.js"></script>
+
+</head>
 <link rel="stylesheet" href="ngordnet.css">
 <script src="ngordnet.js"></script>
 
@@ -11,7 +14,9 @@
 
 <p><!--<canvas id="myCanvas" width="400" height="400" style="border:1px solid #d3d3d3;">
 Your browser does not support the HTML5 canvas tag.</canvas>-->
-<img src="blank.png" id="plot">
+<svg width="700" height="500" class="plot">
+    <circle cx="100" cy="75" r="25" fill="green"/>
+</svg>  
     <textarea class = "textresult" id = "textresult"></textarea>
 
 </p>
